environments/stage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: uptime-kuma-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
      - name: uptime-kuma
        image: elestio/uptime-kuma:latest
        ports:
        - containerPort: 3001
        # livenessProbe:
        # httpGet:
        #   path: /
        #   port: 3001
        # initialDelaySeconds: 30
        # periodSeconds: 10
        # timeoutSeconds: 5
        # failureThreshold: 3
      # readinessProbe:
      #   httpGet:
      #     path: /
      #     port: 3001
      #   initialDelaySeconds: 10
      #   periodSeconds: 5
      #   timeoutSeconds: 3
      #   failureThreshold: 3
        volumeMounts:
        - name: uptime-kuma-storage
          mountPath: /app/data
      volumes:
      - name: uptime-kuma-storage
        persistentVolumeClaim:
          claimName: uptime-kuma-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma-stage
spec:
  selector:
    app: uptime-kuma
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: LoadBalancer
