environments/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  namespace: uptime-kuma
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-product
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: uptime.dev.example.com
    http:
      paths:
      - backend:
          service:
            name: uptime-kuma
            port:
              number: 3227
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - uptime.dev.example.com
    secretName: uptime-kuma-tls
status:
  loadBalancer:
    ingress:
    - ip: 192.168.95.35
